<resources>
    <string name="app_name">qSmart</string>
    <string name="title_activity_monitor_settings">Settings</string>
    <string name="no_compatible_devices_scanned">No Compatible Devices Found.\n If this is the first time connecting, make sure your IQ is in scan mode and your GPS is turned on</string>
    <string name="connect_to_scanned_device">Would you like to connect to the below IQ130?</string>
    <string name="select_device_to_connect">Select a device to connect with:</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!--default values-->
    <string name="no_value">---</string>
    <string name="probe2default">Food 1</string>
    <string name="probe3default">Food 2</string>
    <string name="pit_set_default">Pit Set</string>

    <!--pref_general-->
    <string name="food1_probe_name_label">Food 1 Probe Name</string>
    <string name="food2_probe_name_label">Food 2 Probe Name</string>
    <string name="display_name_label">IQ130 Display Name</string>
    <string name="passcode_label">Passcode</string>
    <string name="passcode_summary">Only used for legacy connections</string>
    <string name="temp_units_label">Temperature Units</string>
    <string name="haptic_feedback_label">Enable Haptic Feedback</string>
    <string name="sound_label">Enable Sound</string>


    <!--param options-->
    <string name="param_pit_set">Pit Set</string>
    <string name="param_pit_alarm">Pit Alarm Deviation</string>
    <string name="param_delay_pit_set">Delay Pit Set</string>
    <string name="param_delay_time">Delay Time</string>
    <string name="param_food1_alarm">Food 1 Alarm</string>
    <string name="param_food1_pit_set">Food 1 Pit Set</string>
    <string name="param_food1_target">Food 1 Temp</string>
    <string name="param_food2_alarm">Food 2 Alarm</string>
    <string name="param_food2_pit_set">Food 2 Pit Set</string>
    <string name="param_food2_target">Food 2 Temp</string>



    <string name="connect">Connect</string>
    <string name="close">Close</string>
    <string name="no_connection">No Connection</string>

    <string name="pref_enable_acra">Send crash reports?</string>
    <string name="pref_acra_enabled">Crash reports will be sent to the developer</string>
    <string name="pref_acra_disabled">Crash reports will not be sent to the developer</string>
    <string name="disconnect">Disconnect</string>

</resources>
