<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_mon_bluetooth"
        android:icon="@drawable/ic_scan_36"
        android:title="@string/bluetooth"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_mon_settings"
        android:icon="@drawable/ic_gear_36"
        android:title="@string/settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_mon_disconnect"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/disconnect"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_mon_help"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>